add structure, more content

--- a/_posts/2018-05-06-first.md
+++ b/_posts/2018-05-06-first.md
@@ -1,8 +1,8 @@
 ---
 layout: blog 
-title: "this is my first post!" 
+title: "Brewing is fun!" 
 date: May 6, 2018
 categories: brewing 
 ---
 
-Hello this is a post. I want to see if it works. 
+Welcome to the brewing portion of the blog! 
