--- a/_posts/2019-03-27-test.md
+++ b/_posts/2019-03-27-test.md
@@ -4,7 +4,8 @@ title: "test"
 author: "Edgar"
 date: 2019-03-27 14:22:33
 categories:
-- documentation enameling
+- documentation
+- enameling
 ---
 
 this is a test post to see if the post scaffolder works. thx.
